Bug 404461 - when I open JavaScript Debugger I get assertion: Can't get mTree or mTreeView r=surkov.alexander a=mtschrep